Say the true reason the font jars stay off the module path, because the guide and ADR 046 blamed a split package that does not exist: nothing requires those jars, so they are never loaded, and resolving one brings them all
Measured on the module-path rehearsal. The four limn-fonts jars all share limn/fonts, and with --add-modules ALL-MODULE-PATH they load and the window renders, since an automatic module's packages come from its classes and these have none. Left unresolved they are invisible, and the backend stops on missing Roboto. --add-modules limn.fonts.roboto resolves all four. The same run confirmed the FFmpeg natives note: two of those jars in one folder stop the JVM.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>