@@ -81,8 +81,9 @@ exported to yours.
 
 Four kinds of jar belong on the class path even when the application is a module:
 
-- **The font jars.** Every `limn-fonts` artifact keeps its faces under the same folder, and the
-  backend reads them as resources.
+- **The font jars.** No module requires them, so on the module path they are never loaded, and
+  the backend stops at startup because Roboto is missing. `--add-modules limn.fonts.roboto`
+  also works, and it brings the other font jars with it.
 - **The FFmpeg native jars**, `limn-ffmpeg-natives`, which the video decoder also reads as
   resources.
 - **LWJGL's native jars.** They are modules that nothing requires, so on the module path they are
